--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
                 <h1>Minnie Su</h1>
                 <p><em>Member of <strong> <a href="https://odnq.org/">ODNQ</a> </strong> , future-to-be web
                         developper</em></p>
-                <p>I am a member of OPDQ, graduated from dietetics major in McGill University.</p>
+                <p>Clinical Dietitian graduated from McGill University.</p>
                 <p>I am passionate about web development, modelling and dancing.</p>
             </td>
         </tr>
