--- a/foo.html
+++ b/foo.html
@@ -2,25 +2,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>💜 Minnie's Personal Site!</title>
+    <title>💙 Minnie's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
-    <table cellspacing="30">
-        <tr>
-            <td><img src="images/minnie.png" alt="Minnie profile picture"></td>
-            <td>
-                <h1>Minnie Su</h1>
-                <p><em>Member of <strong> <a href="https://odnq.org/">ODNQ</a> </strong> , future-to-be web
-                        developper</em></p>
-                <p>Clinical Dietitian graduated from McGill University.</p>
-                <p>I am passionate about web development, modelling and dancing.</p>
-            </td>
-        </tr>
-    </table>
-    <hr size="2">
+    <div class="center">
+            <img src="images/minnie.png" alt="Minnie profile picture"></td>
+            <h1>Minnie Su</h1>
+            <p><em>Member of <strong> <a href="https://odnq.org/">ODNQ</a> </strong> , Clinical Dietitian, Future-to-be Web
+                        Developper</em></p>
+            <p>I am passionate about web development, modelling and dancing.</p>
+    <hr>
     <h3>Education</h3>
-    <table>
+    <table class="center">
         <tr>
             <td>Date</td>
             <td>Education</td>
@@ -34,9 +28,9 @@
             <td>New Westminster Secondary School</td>
         </tr>
     </table>
-    <hr size="2">
+    <hr>
     <h3>Working Experience</h3>
-    <table cellspacing="10">
+    <table cellspacing="10" class="center">
         <tr>
             <td>Date</td>
             <td>Work</td>
@@ -50,9 +44,9 @@
             <td>Clinical dietitian in Maimonides Geriatric Center</td>
         </tr>
     </table>
-    <hr size="2">
+    <hr>
     <h3>Skills</h3>
-    <table cellspacing="10">
+    <table cellspacing="10" class="center">
         <tr>
             <td>CSS(3)</td>
             <td>⭐️</td>
@@ -70,11 +64,11 @@
         </tr>
     </table>
 
-    <hr size="2">
+    <hr>
     <h3><a href="hobbies.html">My Hobbies</a>
         <a href="contact-me.html">Contact Me</a>
     </h3>
-
+</div>
 </body>
 
 </html>
